--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -58,10 +58,10 @@ channels:
 specs:
   # Python
   - python =3.13.2
-  - pip =25.0.1
-  - wheel =0.45.1
-  - conda =25.1.1
-  - mamba =2.0.5
+  # - pip =25.0.1
+  # - wheel =0.45.1
+  # - conda =25.1.1
+  # - mamba =2.0.5
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne-base =1.4dev0=*_20230503
@@ -80,11 +80,11 @@ specs:
   # - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
   # - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
   # - libblas =3.9.0=*openblas
-  - jupyter =1.1.1
-  - jupyterlab =4.3.5
-  - ipykernel =6.29.5
-  - spyder-kernels =3.0.3
-  - darkdetect =0.8.0
+  # - jupyter =1.1.1
+  # - jupyterlab =4.3.5
+  # - ipykernel =6.29.5
+  # - spyder-kernels =3.0.3
+  # - darkdetect =0.8.0
   # - qdarkstyle =3.2.3
   # - cython =3.0.12
   # - pyxdf =1.17.0
