--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -45,10 +45,15 @@ signing_identity_name:                  # [osx]  Used for productsign
 notarization_identity_name:             # [osx]  Used for codesign
 reverse_domain_identifier: tools.mne    # [osx]  Used for productbuild --identifier $reverse_domain_identifier.$name
 
+menu_packages:
+  - mne-installer-menus
+
 channels:
   - conda-forge
 specs:
   - python =3.13.2
+  - mne-installer-menus =1.9.0
+  - mne-base =1.9.0
   - plotly =6.0.0
 condarc:
   channels:
