--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -234,7 +234,7 @@ jobs:
         run: .\%MNE_INSTALLER_NAME% /S /InstallationType=JustMe /AddToPath=1
       - run: tail -n 30 $MNE_INSTALL_PREFIX/install.log && exit 1
         shell: bash
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && (success() || failure())
       - run: ./tools/export_frozen_env_def.sh
         if: false
       - uses: actions/upload-artifact@v4
