--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -120,7 +120,7 @@ specs:
   - pyprep =0.4.3=*_1
   - python-picard =0.8
   - pybv =0.7.6
-  - edfio =0.4.8
+  - edfio =0.4.7  # allow_outdated, for some reason 0.4.8 won't download
   - eeglabio =0.0.3
   - mffpy =0.10.0
   - openmeeg =2.5.15
@@ -167,7 +167,7 @@ specs:
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
   - matplotlib-base =3.10.1
   - tornado =6.4.2
-  - pyside6 =6.9.0  # allow_autdated, PyVista (VTK 9.3.1) and Mayavi
+  - pyside6 =6.8.2  # allow_autdated, PyVista (VTK 9.3.1) and Mayavi
   - qt6-main =6.8.2  # allow_outdated
   - ipympl =0.9.7
   - qtpy =2.4.3
