--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -57,11 +57,11 @@ channels:
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 specs:
   # Python
-  - python =3.12.7  # allow_outdated, vtk
+  - python =3.13.2
   - pip =25.0.1
   - wheel =0.45.1
   - conda =25.1.1
-  - mamba =2.0.5
+  - mamba =2.0.8
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne-base =1.4dev0=*_20230503
@@ -79,30 +79,30 @@ specs:
   - mne-bids-pipeline =1.9.0
   - mne-qt-browser =0.6.3
   - mne-connectivity =0.7.0=*_1
-  - mne-faster =1.2.1
+  - mne-faster =1.2.2
   - mne-nirs =0.7.1
   - mne-features =0.3
   - mne-rsa =0.9.1
   - mne-ari =0.1.2
   - mne-icalabel =0.7.0
   - mne-gui-addons =0.1=*_1
-  - mne-lsl =1.8.0
+  - mne-lsl =1.9.0
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
   - antio =0.5.0
   - wfdb =4.2.0
-  - meegkit =0.1.7
+  - meegkit =0.1.9
   - eeg_positions =2.1.2
   # MRI
-  - fsleyes =1.13.0
+  - fsleyes =1.14.2
   - dcm2niix =1.0.20241211
   - dipy =1.10.0
   # Time-frequency analysis
   - pactools =0.3.1
   - tensorpac =0.6.5
-  - emd =0.8.0
-  # - neurodsp =2.2.0  # TODO: broken with latest SciPy
-  # - bycycle =1.1.0  # TODO: broken with latest SciPy
+  - emd =0.8.1
+  - neurodsp =2.3.0
+  - bycycle =1.1.0
   - fooof =1.0.0
   # Microstates
   - mne-microstates =0.3.0
@@ -116,11 +116,11 @@ specs:
   - neurokit2 =0.2.10
   - mnelab =1.0.0
   # other
-  - pyriemann =0.7
+  - pyriemann =0.8
   - pyprep =0.4.3=*_1
   - python-picard =0.8
   - pybv =0.7.6
-  - edfio =0.4.5
+  - edfio =0.4.7
   - eeglabio =0.0.3
   - mffpy =0.10.0
   - openmeeg =2.5.15
@@ -130,29 +130,27 @@ specs:
   # <<< END RELATED SOFTWARE LIST >>>
   # ^^^ this line is special and used by MNE-Python, do not change it!
 
-  - spyder-base =6.0.4
   - antropy =0.1.9
   - mayavi =4.8.2=pyside6_*
   - traitsui =8.0.0
   - pyface =8.0.0=*_1
   - imageio-ffmpeg =0.6.0
   - pandas =2.2.3
-  - polars =1.22.0
-  - scipy =1.15.1
+  - polars =1.26.0
+  - scipy =1.15.2
   - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
-  - openblas =0.3.28
+  - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
   - libblas =3.9.0=*openblas
   - jupyter =1.1.1
-  - jupyterlab =4.3.5
+  - jupyterlab =4.3.6
   - ipykernel =6.29.5
   - spyder-kernels =3.0.3
-  # TODO: Needs to not require pyqt
-  # https://github.com/spyder-ide/spyder/issues/20201
-  # spyder =6.1.0
+  - spyder-base =6.0.5
+  - qtconsole =5.6.1
   - darkdetect =0.8.0
   - qdarkstyle =3.2.3
   - numba =0.61.0
-  - cython =3.0.11
+  - cython =3.0.12
   # I/O
   - pyxdf =1.17.0
   - openpyxl =3.1.5
@@ -166,61 +164,64 @@ specs:
   # Viz
   # matplotilb is just matplotlib-base, tornado, and pyqt
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
-  - matplotlib-base =3.10.0
+  - matplotlib-base =3.10.1
   - tornado =6.4.2
-  - pyside6 =6.7.3=*_1  # allow_outdated, vtk needs rebuild against 6.8.0 https://github.com/conda-forge/vtk-feedstock/pull/357
-  - qt6-main =6.7.3  # allow_outdated
-  - ipympl =0.9.6
-  - qtpy =2.4.2
+  - pyside6 =6.8.2
+  - qt6-main =6.8.2
+  - ipympl =0.9.7
+  - qtpy =2.4.3
   - seaborn =0.13.2
-  - plotly =6.0.0
-  - vtk =9.3.1=qt*
+  - plotly =6.0.1
+  # PyVista doesn't yet support VTK 9.4
+  - vtk =9.3.1=qt*  # allow_outdated
   - ipywidgets =8.1.5
   - pyvista =0.44.2
-  - pyvistaqt =0.11.1
-  - trame =3.8.0
+  - pyvistaqt =0.11.2
+  - trame =3.8.1
   - trame-vtk =2.8.15
   - trame-vuetify =2.8.1
   - termcolor =2.5.0
   - defusedxml =0.7.1
   # Development
-  - gh =2.66.1
-  - setuptools_scm =8.1.0
-  - pytest =8.3.4
+  - gh =2.69.0
+  - setuptools_scm =8.2.1
+  - pytest =8.3.5
   - pytest-cov =6.0.0
   - pytest-qt =4.4.0
   - pytest-timeout =2.3.1
-  - pre-commit =4.1.0
-  - ruff =0.9.6
-  - uv =0.5.29
+  - pre-commit =4.2.0
+  - ruff =0.11.2
+  - uv =0.6.9
   - check-manifest =0.50
   - codespell =2.4.1
   - py-spy =0.4.0
-  - line_profiler =4.1.3
+  - line_profiler =4.2.0
   - memory_profiler =0.61.0
   - twine =6.1.0
   - hatchling =1.27.0
   - hatch-vcs =0.4.0
   - mypy =1.15.0
-  - towncrier =23.11.0  # allow_outdated, 24.7.1 doesn't work with sphinxcontrib-towncrier
+  - towncrier =24.8.0
   - vulture =2.14
   # Doc building
   - numpydoc =1.8.0
   - pydata-sphinx-theme =0.16.1
-  - graphviz =12.0.0  # allow_outdated, conflicts with PySide6 6.7.3
+  - graphviz =12.2.1
   - python-graphviz =0.20.3
-  - selenium =4.28.1
-  - sphinx =8.1.3
+  - selenium =4.30.0
+  - sphinx =8.2.3
   - sphinx-design =0.6.1
-  - sphinx-gallery =0.18.0
+  - sphinx-gallery =0.19.0
   - sphinxcontrib-bibtex =2.6.3
   - sphinx-copybutton =0.5.2
   - sphinxcontrib-youtube =1.4.1
   - intersphinx-registry =0.2501.23
   # OS-specific
-  - git =2.47.1  # [win]
+  - git =2.49.0  # [win]
   - make =4.4.1  # [win]
   - pyobjc-core =11.0  # [osx]
+  # https://github.com/conda-forge/libffi-feedstock/issues/52
+  - libffi =3.4.2  # [osx and arm64]  # allow_outdated
   - pyobjc-framework-Cocoa =11.0  # [osx]
   - pyobjc-framework-FSEvents =11.0  # [osx]
 condarc:
