--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -57,11 +57,12 @@ channels:
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 specs:
   # Python
-  - python =3.13.2
+  - python =3.13.3  # [not (osx and arm64)]
+  - python =3.13.2  # [osx and arm64]  # allow_outdated
   - pip =25.0.1
   - wheel =0.45.1
   - conda =25.3.1
-  - mamba =2.0.8
+  - mamba =2.1.0
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne-base =1.4dev0=*_20230503
@@ -77,7 +78,7 @@ specs:
   # <<< BEGIN RELATED SOFTWARE LIST >>>
   - mne-bids =0.16.0
   - mne-bids-pipeline =1.9.0
-  - mne-qt-browser =0.6.3
+  - mne-qt-browser =0.7.1
   - mne-connectivity =0.7.0=*_1
   - mne-faster =1.2.2
   - mne-nirs =0.7.1
@@ -96,7 +97,7 @@ specs:
   # MRI
   - fsleyes =1.14.2
   - dcm2niix =1.0.20241211
-  - dipy =1.10.0
+  - dipy =1.11.0
   # Time-frequency analysis
   - pactools =0.3.1
   - tensorpac =0.6.5
@@ -127,6 +128,17 @@ specs:
   - python-neo =0.14.0
   - nitime =0.11
   - snirf =0.8.0
+  - alphacsc =0.4.1
+  # Not on PyPI or no wheels on PyPI
+  # conpy: https://aaltoimaginglanguage.github.io/conpy/
+  # posthoc: https://users.aalto.fi/~vanvlm1/posthoc/python/
+  # eelbrain: https://eelbrain.readthedocs.io/en/stable/index.html
+  # Not on conda-forge
+  # niseq: https://github.com/john-veillette/niseq
+  # sesameeg: https://pybees.github.io/sesameeg
+  # invertmeeg: https://github.com/LukeTheHecker/invert
+  # Meggie: https://github.com/cibr-jyu/meggie
+  # MEM: https://github.com/multifunkim/best-python
   # <<< END RELATED SOFTWARE LIST >>>
   # ^^^ this line is special and used by MNE-Python, do not change it!
 
@@ -136,7 +148,7 @@ specs:
   - pyface =8.0.0=*_1
   - imageio-ffmpeg =0.6.0
   - pandas =2.2.3
-  - polars =1.26.0
+  - polars =1.27.0
   - scipy =1.15.2
   - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
   - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
@@ -150,7 +162,7 @@ specs:
   # spyder =6.1.0
   - darkdetect =0.8.0
   - qdarkstyle =3.2.3
-  - numba =0.61.0
+  - numba =0.61.2
   - cython =3.0.12
   # I/O
   - pyxdf =1.17.0
@@ -175,10 +187,10 @@ specs:
   - plotly =6.0.1
   # PyVista doesn't yet support VTK 9.4
   - vtk =9.3.1=qt*  # allow_outdated
-  - ipywidgets =8.1.5
+  - ipywidgets =8.1.6
   - pyvista =0.44.2
   - pyvistaqt =0.11.2
-  - trame =3.8.1
+  - trame =3.8.2
   - trame-vtk =2.8.15
   - trame-vuetify =3.0.0
   - termcolor =3.0.1
@@ -191,8 +203,8 @@ specs:
   - pytest-qt =4.4.0
   - pytest-timeout =2.3.1
   - pre-commit =4.2.0
-  - ruff =0.11.4
-  - uv =0.6.13
+  - ruff =0.11.5
+  - uv =0.6.14
   - check-manifest =0.50
   - codespell =2.4.1
   - py-spy =0.4.0
@@ -222,7 +234,7 @@ specs:
   - make =4.4.1  # [win]
   - pyobjc-core =11.0  # [osx]
   # https://github.com/conda-forge/libffi-feedstock/issues/52
-  - libffi =3.4.2  # [osx and arm64]  # allow_outdated
+  - libffi =3.4.6  # [osx and arm64]  # allow_outdated
   - pyobjc-framework-Cocoa =11.0  # [osx]
   - pyobjc-framework-FSEvents =11.0  # [osx]
 condarc:
