--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -187,7 +187,7 @@ specs:
   - plotly =6.0.1
   - vtk =9.4.2
   - ipywidgets =8.1.7
-  - pyvista =0.45.0
+  - pyvista =0.45.0=*_1
   - pyvistaqt =0.11.2
   - trame =3.9.0
   - trame-vtk =2.8.15
