--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -88,7 +88,7 @@ specs:
   - mne-icalabel =0.7.0
   - mne-gui-addons =0.1=*_1
   - mne-lsl =1.9.0
-  - mne-kit-gui =1.3.0
+  # - mne-kit-gui =1.3.0
   - autoreject =0.4.3
   - antio =0.5.0
   - wfdb =4.3.0
@@ -124,7 +124,7 @@ specs:
   - edfio =0.4.8
   - eeglabio =0.0.3
   - mffpy =0.10.0
-  - openmeeg =2.5.15
+  - openmeeg =2.5.15=*_1
   - python-neo =0.14.1
   - nitime =0.11
   - snirf =0.8.0
@@ -143,9 +143,9 @@ specs:
   # ^^^ this line is special and used by MNE-Python, do not change it!
 
   - antropy =0.1.9
-  - mayavi =4.8.2=*_310
-  - traitsui =8.0.0
-  - pyface =8.0.0=*_1
+  # - mayavi =4.8.2=*_310
+  # - traitsui =8.0.0
+  # - pyface =8.0.0=*_1
   - imageio-ffmpeg =0.6.0
   - pandas =2.2.3
   - polars =1.27.1
