--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -122,10 +122,10 @@ specs:
   - pyprep =0.4.3=*_1
   - python-picard =0.8
   - pybv =0.7.6
-  - edfio =0.4.7  # allow_outdated, for some reason 0.4.8 won't download
+  - edfio =0.4.8
   - eeglabio =0.0.3
   - mffpy =0.10.0
-  - openmeeg =2.5.15
+  - openmeeg =2.5.15=*_1
   - python-neo =0.14.1
   - nitime =0.11
   - snirf =0.8.0
@@ -144,9 +144,9 @@ specs:
   # ^^^ this line is special and used by MNE-Python, do not change it!
 
   - antropy =0.1.9
-  - mayavi =4.8.2=pyside6_*
+  - mayavi =4.8.3=pyside6_*
   - traitsui =8.0.0
-  - pyface =8.0.0=*_1
+  - pyface =8.0.0
   - imageio-ffmpeg =0.6.0
   - pandas =2.2.3
   - polars =1.29.0
@@ -180,14 +180,13 @@ specs:
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
   - matplotlib-base =3.10.3
   - tornado =6.5
-  - pyside6 =6.8.2  # allow_outdated, PyVista (VTK 9.3.1) and Mayavi
-  - qt6-main =6.8.2  # allow_outdated
+  - pyside6 =6.9.0
+  - qt6-main =6.9.0
   - ipympl =0.9.7
   - qtpy =2.4.3
   - seaborn =0.13.2
   - plotly =6.1.0
-  # PyVista doesn't yet support VTK 9.4
-  - vtk =9.3.1=qt*  # allow_outdated
+  - vtk =9.4.2
   - ipywidgets =8.1.7
   - pyvista =0.45.2
   - pyvistaqt =0.11.2
