--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -154,6 +154,7 @@ specs:
   - scipy =1.16.0
   - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
   - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
+  - libopenblas ==0.3.28  # allow_outdated, NumPy etc. need to update
   - libblas =3.9.0=*openblas
   - jupyter =1.1.1
   - jupyterlab =4.4.4
