--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -45,9 +45,8 @@ signing_identity_name:                  # [osx]  Used for productsign
 notarization_identity_name:             # [osx]  Used for codesign
 reverse_domain_identifier: tools.mne    # [osx]  Used for productbuild --identifier $reverse_domain_identifier.$name
 
-# Only create menus for mne-installer-menus
 menu_packages:
-  - mne-installer-menus
+  - mne-installer-menu
 
 channels:
   - conda-forge
@@ -66,11 +65,9 @@ specs:
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne-base =1.4dev0=*_20230503
-  # - mne-installer-menus =1.4dev0=*_20230503
-  # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   - mne =1.9.0=*_pyside6_*_102
-  - mne-installer-menus =1.9.0=*_102
+  - mne-installer-menu =1.9.0
   # For testing purposes with build_local.sh, you can comment out all deps
   # below for speed, and change mne to mne-base above
 
