--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,29 @@ on:  # yamllint disable-line rule:truthy
 
 jobs:
   # Build installers
+  build_menu:
+    name: Build menu package
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -el {0}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: mamba-org/setup-micromamba@v2
+        with:
+          environment-name: menubuild
+          create-args: python=3.13 conda-build
+      - run: conda-build mne-installer-menu --no-anaconda-upload --croot conda-bld
+        timeout-minutes: 5
+      - uses: actions/upload-artifact@v4
+        with:
+          name: menu-package
+          path: conda-bld
+          retention-days: 1
+
   build_macos:
     name: Build (${{ matrix.os }})
+    needs: [build_menu]
     strategy:
       fail-fast: false
       matrix:
@@ -35,6 +56,9 @@ jobs:
       - uses: mamba-org/setup-micromamba@v2
         with:
           environment-file: environment.yml
+      - uses: actions/download-artifact@v4
+        with:
+          name: menu-package
       - run: ./tools/extract_version.sh
       - run: ./tools/macos_install_certificates.sh
         if: ${{ github.event_name != 'pull_request' }}
@@ -70,6 +94,7 @@ jobs:
 
   build_linux:
     name: Build (${{ matrix.os }})
+    needs: [build_menu]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -83,6 +108,9 @@ jobs:
       - uses: mamba-org/setup-micromamba@v2
         with:
           environment-file: environment.yml
+      - uses: actions/download-artifact@v4
+        with:
+          name: menu-package
       - run: ./tools/extract_version.sh
       - run: ./tools/run_constructor.sh
         timeout-minutes: 20
@@ -95,6 +123,7 @@ jobs:
 
   build_windows:
     name: Build (${{ matrix.os }})
+    needs: [build_menu]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -108,6 +137,9 @@ jobs:
       - uses: mamba-org/setup-micromamba@v2
         with:
           environment-file: environment.yml
+      - uses: actions/download-artifact@v4
+        with:
+          name: menu-package
       - run: conda install -c conda-forge -y "nsis==3.08"
       - run: ./tools/extract_version.sh
       - run: ./tools/run_constructor.sh
