--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,16 +21,13 @@ jobs:
   build_menu:
     name: Build menu package
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -el {0}
     steps:
       - uses: actions/checkout@v4
       - uses: mamba-org/setup-micromamba@v2
         with:
           environment-name: menubuild
           create-args: python=3.13 conda-build
-      - run: conda-build mne-installer-menu --no-anaconda-upload --croot conda-bld
+      - run: ./tools/run_conda_build.sh
         timeout-minutes: 5
       - uses: actions/upload-artifact@v4
         with:
