--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,8 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: menu-package
+      - run: ls -alt
+      - run: ls -alt conda-bld
       - run: ./tools/extract_version.sh
       - run: ./tools/macos_install_certificates.sh
         if: ${{ github.event_name != 'pull_request' }}
