--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,33 @@ on:  # yamllint disable-line rule:truthy
 
 jobs:
   # Build installers
+  build_menu:
+    name: Build menu package
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -el {0}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: mamba-org/setup-micromamba@v2
+        with:
+          environment-name: menubuild
+          create-args: python=3.13 conda-build
+      - run: ./tools/run_conda_build.sh
+        timeout-minutes: 5
+      - uses: actions/upload-artifact@v4
+        with:
+          name: menu-package
+          path: conda-bld
+          retention-days: 1
+
   build_macos:
     name: Build (${{ matrix.os }})
+    needs: [build_menu]
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, macos-14]  # Intel and Apple Silicon, respectively
+        os: [macos-13, macos-latest]  # Intel and Apple Silicon, respectively
     runs-on: ${{ matrix.os }}
     env:
       GITHUB_EVENT_NAME: ${{ github.event_name }}
@@ -35,6 +56,10 @@ jobs:
       - uses: mamba-org/setup-micromamba@v2
         with:
           environment-file: environment.yml
+      - uses: actions/download-artifact@v4
+        with:
+          name: menu-package
+          path: conda-bld
       - run: ./tools/extract_version.sh
       - run: ./tools/macos_install_certificates.sh
         if: ${{ github.event_name != 'pull_request' }}
@@ -70,6 +95,7 @@ jobs:
 
   build_linux:
     name: Build (${{ matrix.os }})
+    needs: [build_menu]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -83,6 +109,10 @@ jobs:
       - uses: mamba-org/setup-micromamba@v2
         with:
           environment-file: environment.yml
+      - uses: actions/download-artifact@v4
+        with:
+          name: menu-package
+          path: conda-bld
       - run: ./tools/extract_version.sh
       - run: ./tools/run_constructor.sh
         timeout-minutes: 20
@@ -95,11 +125,12 @@ jobs:
 
   build_windows:
     name: Build (${{ matrix.os }})
+    needs: [build_menu]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2022]
+        os: [windows-latest]
     defaults:
       run:
         shell: bash -el {0}
@@ -108,6 +139,10 @@ jobs:
       - uses: mamba-org/setup-micromamba@v2
         with:
           environment-file: environment.yml
+      - uses: actions/download-artifact@v4
+        with:
+          name: menu-package
+          path: conda-bld
       - run: conda install -c conda-forge -y "nsis==3.08"
       - run: ./tools/extract_version.sh
       - run: ./tools/run_constructor.sh
@@ -126,19 +161,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, macos-14]
+        os: [macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
         shell: bash -el {0}
     steps:
       - uses: actions/checkout@v4
-      # The macos-14 runner doesn't come equipped with Python, so we need to install it
-      # there.
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-        if: ${{ matrix.os == 'macos-14' }}
       - run: ./tools/extract_version.sh
       - uses: actions/download-artifact@v4
         with:
