--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -45,12 +45,12 @@ signing_identity_name:                  # [osx]  Used for productsign
 notarization_identity_name:             # [osx]  Used for codesign
 reverse_domain_identifier: tools.mne    # [osx]  Used for productbuild --identifier $reverse_domain_identifier.$name
 
-# Only create menus for mne-installer-menus
 menu_packages:
-  - mne-installer-menus
+  - mne-installer-menu
 
 channels:
   - conda-forge
+  - ./conda-bld
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - conda-forge/label/mne_dev
   # - conda-forge/label/mne-bids_dev
@@ -66,11 +66,9 @@ specs:
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne-base =1.4dev0=*_20230503
-  # - mne-installer-menus =1.4dev0=*_20230503
-  # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   - mne =1.9.0=*_pyside6_*_102
-  - mne-installer-menus =1.9.0=*_102
+  - mne-installer-menu =1.9.0=*  # locally_built
   # For testing purposes with build_local.sh, you can comment out all deps
   # below for speed, and change mne to mne-base above
 
@@ -206,7 +204,7 @@ specs:
   - pytest-timeout =2.4.0
   - flaky =3.8.1
   - pre-commit =4.2.0
-  - ruff =0.12.1
+  - ruff =0.12.2
   - uv =0.7.19
   - check-manifest =0.50
   - codespell =2.4.1
@@ -219,6 +217,12 @@ specs:
   - mypy =1.16.1
   - towncrier =24.8.0
   - vulture =2.14
+  - grayskull =2.9.1
+  - conda-build =25.5.0
+  - conda-smithy =3.50.1
+  - constructor =3.11.3
+  - menuinst =2.3.0
+  - conda-standalone =24.11.0
   # Doc building
   - numpydoc =1.9.0
   - pydata-sphinx-theme =0.16.1
