--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -180,8 +180,8 @@ specs:
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
   - matplotlib-base =3.10.3
   - tornado =6.5.1
-  - pyside6 =6.9.1
-  - qt6-main =6.9.1
+  - pyside6 =6.9.0  # allow_outdated, bug in 6.9.1
+  - qt6-main =6.9.0  # allow_outdated, bug in 6.9.1
   - ipympl =0.9.7
   - qtpy =2.4.3
   - seaborn =0.13.2
