--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -118,7 +118,7 @@ specs:
   - mnelab =1.0.3
   # other
   - pyriemann =0.8
-  - pyprep =0.5.0=*_1
+  - pyprep =0.5.0
   - python-picard =0.8
   - pybv =0.7.6
   - edfio =0.4.9
