--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -13,6 +13,8 @@ on:  # yamllint disable-line rule:truthy
 jobs:
   check-skip:
     runs-on: ubuntu-latest
+    outputs:
+      skip: ${{ steps.skip.outputs.skip }}
     steps:
       - uses: actions/checkout@v4
       - name: Check skip
