--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -155,7 +155,7 @@ specs:
   - libblas =3.9.0=*openblas
   - jupyter =1.1.1
   - jupyterlab =4.4.9
-  - ipykernel =7.0.0
+  - ipykernel =6.30.1  # allow_outdated, 7+ incompatible with spyder_kernels
   - spyder-kernels =3.1.0
   # TODO: Needs to not require pyqt
   # https://github.com/spyder-ide/spyder/issues/20201
