--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -148,9 +148,9 @@ specs:
   - imageio-ffmpeg =0.6.0
   - pandas =2.3.3
   - polars =1.35.1
-  - numpy =2.2.6  # allow_outdated, each new version has to wait for numba
+  - numpy =2.3.5  # allow_outdated, each new version has to wait for numba
   - scipy =1.15.2  # allow_outdated, statsmodels pins to <1.16
-  - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
+  - openblas =0.3.30
   - libblas =3.11.0=*openblas
   - jupyter =1.1.1
   - jupyterlab =4.4.10
