--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -148,6 +148,9 @@ specs:
   - pooch =1.8.2
   - tqdm =4.67.1
   - h5py =3.15.1
+  - h5io =0.2.5
+  - pymatreader =1.1.0
+  - numexpr =2.14.1
   - antropy =0.1.9
   - threadpoolctl =3.6.0
   - scikit-learn =1.7.2
