--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -165,7 +165,8 @@ specs:
   - openblas =0.3.30
   - libblas =3.11.0=*openblas
   - jupyter =1.1.1
-  - jupyterlab =4.5.0
+  - notebook =7.4.7
+  - jupyterlab =4.4.10  # allow_outdated, needs notebook 7.5.0 update
   - ipykernel =6.30.1  # allow_outdated, 7+ incompatible with spyder_kernels
   - spyder-kernels =3.1.1
   # TODO: Needs to not require pyqt
@@ -221,7 +222,6 @@ specs:
   - pyzmq =27.1.0
   - traitlets =5.14.3
   # Development
-  - toml-sort
   - pygments =2.19.2
   - psutil =7.1.3
   - memory_profiler =0.61.0
