--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -270,6 +270,7 @@ specs:
   # OS-specific
   - git =2.52.0  # [win]
   - make =4.4.1  # [win]
+  - libffi =3.5.2  # [osx]
   - pyobjc-core =12.1  # [osx]
   - pyobjc-framework-Cocoa =12.1  # [osx]
   - pyobjc-framework-FSEvents =12.1  # [osx]
