--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -182,7 +182,7 @@ specs:
   - openpyxl =3.1.5
   - xlrd =2.0.2
   - nibabel =5.3.2
-  - pyarrow =22.0.0
+  - pyarrow =21.0.0  # allow_outdated, needs qt6-main bump
   # Statistics
   - pingouin =0.5.5
   - statsmodels =0.14.5
@@ -197,6 +197,7 @@ specs:
   - tornado =6.5.2
   - pyside6 =6.9.0  # allow_outdated, bug in 6.9.1
   - qt6-main =6.9.0  # allow_outdated, bug in 6.9.1
+  - pcre2 =10.45  # allow_outdated, needs qt6-main bump
   - ipympl =0.9.8
   - qtpy =2.4.3
   - seaborn =0.13.2
@@ -211,7 +212,7 @@ specs:
   - trame-vuetify =3.1.0
   - termcolor =3.2.0
   - defusedxml =0.7.1
-  - imageio =2.73.0
+  - imageio =2.37.0
   - ipyevents =2.0.4
   - ipython =9.7.0
   - jinja2 =3.1.6
