--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -274,9 +274,10 @@ specs:
   - make =4.4.1  # [win]
   # https://github.com/conda-forge/libffi-feedstock/issues/52
   - libffi =3.4.6  # [osx and arm64]  # allow_outdated
-  - pyobjc-core =12.1  # [osx]
-  - pyobjc-framework-Cocoa =12.1  # [osx]
-  - pyobjc-framework-FSEvents =12.1  # [osx]
+  # 12.1+ requires libffi 3.5.2+
+  - pyobjc-core =12.0  # [osx]  # allow_outdated
+  - pyobjc-framework-Cocoa =12.0  # [osx]  # allow_outdated
+  - pyobjc-framework-FSEvents =12.0  # [osx]  # allow_outdated
 condarc:
   channels:
     - conda-forge
