--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -223,6 +223,8 @@ specs:
   - pillow =12.0.0
   - pyzmq =27.1.0
   - traitlets =5.14.3
+  - pyopengl =0.0
+  - pyqtgraph =0.0
   # Development
   - pygments =2.19.2
   - psutil =7.1.3
