--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -167,8 +167,8 @@ specs:
   - libblas =3.11.0=*openblas
   - jupyter =1.1.1
   - notebook =7.5.0
-  - jupyterlab =4.4.10  # allow_outdated, needs notebook 7.5.0 update
-  - ipykernel =6.30.1  # allow_outdated, 7+ incompatible with spyder_kernels
+  - jupyterlab =4.5.0
+  - ipykernel =7.1.0  # allow_outdated, 7+ incompatible with spyder_kernels
   - spyder-kernels =3.1.2
   # TODO: Needs to not require pyqt
   # https://github.com/spyder-ide/spyder/issues/20201
@@ -223,8 +223,8 @@ specs:
   - pillow =12.0.0
   - pyzmq =27.1.0
   - traitlets =5.14.3
-  - pyopengl =0.0
-  - pyqtgraph =0.0
+  - pyopengl =3.1.10
+  - pyqtgraph =0.14.0
   # Development
   - pygments =2.19.2
   - psutil =7.1.3
