--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -168,7 +168,7 @@ specs:
   - jupyter =1.1.1
   - notebook =7.5.0
   - jupyterlab =4.5.0
-  - ipykernel =7.1.0
+  - ipykernel =6.30.1  # allow_outdated, 7+ incompatible with spyder_kernels
   - spyder-kernels =3.1.2
   # TODO: Needs to not require pyqt
   # https://github.com/spyder-ide/spyder/issues/20201
