--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -120,11 +120,10 @@ specs:
   - pyprep =0.5.0
   - python-picard =0.8
   - pybv =0.7.6
-  - edfio =0.4.10
+  - edfio =0.4.11
   - eeglabio =0.1.2
   - mffpy =0.10.0
   - openmeeg =2.5.15=*_3
-  - libgfortran5 =15.2.0
   - python-neo =0.14.1
   - nitime =0.12.1
   - snirf =0.8.0
@@ -142,6 +141,7 @@ specs:
   # <<< END RELATED SOFTWARE LIST >>>
   # ^^^ this line is special and used by MNE-Python, do not change it!
 
+  - libgfortran5 =15.2.0
   - decorator =5.2.1
   - filelock =3.20.0
   - lazy-loader =0.4
@@ -166,10 +166,10 @@ specs:
   - openblas =0.3.30
   - libblas =3.11.0=*openblas
   - jupyter =1.1.1
-  - notebook =7.4.7
-  - jupyterlab =4.4.10  # allow_outdated, needs notebook 7.5.0 update
+  - notebook =7.5.0
+  - jupyterlab =4.5.0
   - ipykernel =6.30.1  # allow_outdated, 7+ incompatible with spyder_kernels
-  - spyder-kernels =3.1.1
+  - spyder-kernels =3.1.2
   # TODO: Needs to not require pyqt
   # https://github.com/spyder-ide/spyder/issues/20201
   # spyder =6.1.0
@@ -223,6 +223,8 @@ specs:
   - pillow =12.0.0
   - pyzmq =27.1.0
   - traitlets =5.14.3
+  - pyopengl =3.1.10
+  - pyqtgraph =0.14.0
   # Development
   - pygments =2.19.2
   - psutil =7.1.3
