MAINT: Change who automerges

--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,5 +1,5 @@
 name: Bot auto-merge
-on: pull_request  # yamllint disable-line rule:truthy
+on: pull_request_target  # yamllint disable-line rule:truthy
 
 permissions:
   contents: write
@@ -14,4 +14,4 @@ jobs:
         run: gh pr merge --auto --squash "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GH_TOKEN: ${{secrets.MNE_BOT_TOKEN}}
